--- a/server/views/layout.jade
+++ b/server/views/layout.jade
@@ -5,6 +5,10 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
-
+    script.
+      var pubs = !{JSON.stringify(pubs)}
+    script(src="https://maps.googleapis.com/maps/api/js?key=#{gmaps}&v=3.exp&sensor=false")
     script(src="./javascripts/libs/jquery-1.10.2.min.js")
+    script(src="./javascripts/libs/jquery-ui-1.10.3.custom.min.js")
     script(src="./javascripts/index.js")
+    script(src="./javascripts/maps.js")
