added more styles

--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -11,7 +11,7 @@ block content
         =pubs[x].location
         =pubs[x].time
 
-  div.tabs
+  div.tabs.maps
     ul
       li.dumbo
         a(href='#map-canvas-dumbo') Dumbo
