--- a/server/public/stylesheets/style.css
+++ b/server/public/stylesheets/style.css
@@ -1,13 +1,53 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+ width: 480px;
+ margin: 0 auto;
+ font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+}
+
+h1,
+p {
+	text-align: center;
 }
 
 a {
   color: #00B7FF;
 }
 
+
+.maps {
+	width: 480px;
+
+}
+
 .map-canvas {
-	width: 400px;
+	width: 100%;
 	height: 600px;
+	border: 1px solid #aaa;
+	border-width: 0 1px 1px;
+}
+
+ul.ui-tabs-nav {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+ul.ui-tabs-nav li {
+	width: 49.5%;
+	display: inline-block;
+	border: 1px solid #aaa;
+	border-width: 1px 1px 0;
+	border-top-left-radius: 3px;
+	border-top-right-radius: 3px;
+}
+
+ul.ui-tabs-nav li a {
+	text-decoration: none;
+	padding: 10px 20px;
+	display: block;
+	text-align: center;
+}
+
+ul.ui-tabs-nav li.ui-tabs-active a {
+	color: #666;
 }
