--- a/server/views/layout.jade
+++ b/server/views/layout.jade
@@ -15,13 +15,14 @@ html
       nav
         ul
           li
-            a(href='#') menu item 1
+            a(href='/map') Map
           li
             a(href='#') menu item 2
           li
             a(href='#') menu item 3
           li
-            a(href='#') menu item 4  
+            a(href='#') menu item 4
+      #contentLayer
       block content
     script.
       var pubs = !{JSON.stringify(pubs)}
