adding meta tags

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,7 @@ doctype 5
 html
   head
     title= title
+    meta(content="initial-scale=1, maximum-scale=1, user-scalable=no", name="viewport")
     link(href='http://fonts.googleapis.com/css?family=Roboto:100,300', rel='stylesheet', type='text/css')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
