--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -152,6 +152,10 @@ a {
 
 .maps {
     width: 100%;
+    position:absolute;
+    top:30px;bottom:50px;
+    left:0;
+    right:0;
 }
 
 .map-canvas {
