updating feed css

--- a/views/feed.jade
+++ b/views/feed.jade
@@ -10,7 +10,8 @@ block content
             - if (item.type == "TWEET")
               p = item.text 
             - if (item.type == "INSTAGRAM")
-              #{item.user} #{item.text}
+              p =
+                | #{item.user} #{item.text}
               <img src="#{item.image.url}"/>
             - if (item.type == "NOTIFICATION")
               p
