--- a/views/layout.jade
+++ b/views/layout.jade
@@ -15,6 +15,9 @@ html
         h1= title
       nav
         ul
+
+          li
+            a(href='/home') Ho ho home!
           li
             a(href='/feed') Feed
           li
