adding more feed css rules

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -17,7 +17,7 @@ html
         ul
 
           li
-            a(href='/home') Ho ho home!
+            a(href='/') Ho ho home!
           li
             a(href='/feed') Feed
           li
