--- a/views/layout.jade
+++ b/views/layout.jade
@@ -30,3 +30,4 @@ html
     script(src="./javascripts/libs/jquery-ui-1.10.3.custom.min.js")
     script(src="./javascripts/index.js")
     script(src="./javascripts/maps.js")
+    script(src="//platform.twitter.com/widgets.js")
