--- a/views/schedule.jade
+++ b/views/schedule.jade
@@ -7,3 +7,5 @@ block content
         - for (var i = 0; i < pubs[neighbourhood].length; i++)
           li
             = pubs[neighbourhood][i].name
+            | at
+            = pubs[neighbourhood][i].time
