--- a/views/feed.jade
+++ b/views/feed.jade
@@ -8,7 +8,7 @@ block content
         - each item in feed
           li
             - if (item.type == "TWEET")
-              <blockquote class="twitter-tweet"><p>Search API will now always return "real" Twitter user IDs. The with_twitter_user_id parameter is no longer necessary. An era has ended. ^TS</p>&mdash; Twitter API (@twitterapi) <a href="https://twitter.com/twitterapi/status/#{item.id}" data-datetime="2011-11-07T20:21:07+00:00">November 7, 2011</a></blockquote>
+              <blockquote class="twitter-tweet"><p><a href="https://twitter.com/twitterapi/status/#{item.id}" data-datetime="2011-11-07T20:21:07+00:00"></a></blockquote>
             - if (item.type == "INSTAGRAM")
               p
                 | <img class="profile-pic" src="#{item.instagram.user.profile_picture}"/> <strong>#{item.user}</strong> #{item.text}
