--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -246,5 +246,17 @@ ul.ui-tabs-nav li.ui-tabs-active a {
     float:left;
 }
 
+.feed .notification {
+    border:1px solid #999;
+    border-radius:5px;
+    color:#4F8A10;
+    padding:6px;
+    background-color:#DFF2BF;
+}
+
+.feed .notification strong {
+    font-size:18px;
+}
+
 
 
