--- a/views/feed.jade
+++ b/views/feed.jade
@@ -15,6 +15,7 @@ block content
               <img class="instagram-pic" src="#{item.image.url}"/>
             - if (item.type == "NOTIFICATION")
               div.notification
+                <img src="/images/beer.png"/>
                 p
                   |<strong>At #{item.pub}</strong>
                 p
