--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -252,6 +252,7 @@ ul.ui-tabs-nav li.ui-tabs-active a {
     color:#4F8A10;
     padding:6px;
     background-color:#DFF2BF;
+    text-align:center;
 }
 
 .feed .notification strong {
