--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -19,7 +19,7 @@ Header is relative so z-index: 1 guarantees always displayed on top
 */
 header {
     background-color: #111;
-    padding: 10px;
+    padding: 15px 10px 11px;
     text-decoration: none;
     position: fixed;
     width: 100%;
@@ -168,14 +168,17 @@ so that the content is unclickable while menu is shown
 
 h1 {
     color: #eee;
-    font-size: 18px;
+    font-size: 28px;
     font-weight: normal;
     margin: 0;
-    line-height: 32px
+    line-height: 32px;
+    font-family: 'Great Vibes', cursive;
+    text-align: left;
+    padding-left: 66px;
+    line-height: 1.3;
 }
 
 
-h1,
 p {
 	text-align: center;
 }
