--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,7 @@ html
   head
     title= title
     meta(content="initial-scale=1, maximum-scale=1, user-scalable=no", name="viewport")
+    link(href='http://fonts.googleapis.com/css?family=Great+Vibes', rel='stylesheet', type='text/css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(href='/images/beer.png', rel='shortcut icon')
   body
