--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -20,8 +20,8 @@ Header is relative so z-index: 1 guarantees always displayed on top
 header {
     background-color: #111;
     padding: 15px 10px 11px;
-    text-decoration: none;
     position: fixed;
+    text-decoration: none;
     width: 100%;
     z-index: 4;
 }
@@ -32,26 +32,26 @@ position absolute isset to cover the whole viewport
 */
 #content {
     background-color: #FFFFFF;
+    min-height: 1000px;
     padding: 52px 10px 10px 10px;
     position: relative;
     width: auto;
-    min-height: 1000px;
 }
 
 /*
 the hamburger button with a little gradient effekt
 */
 #hamburger {
-    float:left;
-    border: 1px solid #363A42;
+    background: #232323;
     border-radius: 3px 3px 3px 3px;
+    border: 1px solid #363A42;
     cursor: pointer;
     display: block;
+    float:left;
     height: 24px;
     padding: 3px 4px 3px;
     position: relative;
     width: 25px;
-    background: #232323;
 }
 
 /*
@@ -59,8 +59,8 @@ The white stripes in the hamburger button
 */
 #hamburger div {
     background-color: #fff;
-    border: 1px solid #eee;
     border-radius: 2px 2px 2px 2px;
+    border: 1px solid #eee;
     height: 2px;
     margin-top: 3px;
     width: 90%;
@@ -70,17 +70,17 @@ The white stripes in the hamburger button
 The navigation container in the background
 */
 nav {
-    left: 0px;
-    top: 0px;
-    position: fixed;
-    z-index: 0;
-    width: 70%;
-    height: 100%;
-    -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
+    height: 100%;
+    left: 0px;
     overflow-x:hidden;
     overflow-y:auto ;
+    position: fixed;
+    top: 0px;
+    width: 70%;
+    z-index: 0;
     background: #3e3c3d;
     background: -moz-linear-gradient(top,  #3e3c3d 0%, #2d2c2d 100%);
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#3e3c3d), color-stop(100%,#2d2c2d));
@@ -97,23 +97,23 @@ Style the navigation menu
 nav ul {
     list-style: none;
     margin: 0;
-    width: 100%;
     padding: 0;
+    width: 100%;
 }
 
 nav li {
-    position: relative;
-    font-size: 1em;
-    font-weight: bold;
     border-bottom: 1px solid #222222;
     border-top: 1px solid #444444;
+    font-size: 1em;
+    font-weight: bold;
+    position: relative;
 }
 
 nav li a {
     color: #fff;
     display: block;
-    text-decoration: none;
     padding: 15px;
+    text-decoration: none;
 }
 
 nav li a.active{
@@ -126,21 +126,21 @@ nav li a.active{
 
 
 #colophon {
-    color: #fff;
-    position: absolute;
     bottom: 0;
+    color: #fff;
     padding: 10px;
+    position: absolute;
     width: 50%;
 }
 
 #colophon h3 {
-    font-size: 1em;
     cursor: pointer;
+    font-size: 1em;
 }
 
 #colophon p {
-    text-align:left;
     font-size: 0.8em;
+    text-align:left;
 }
 
 #colophon p.hide {
@@ -156,6 +156,7 @@ so that the content is unclickable while menu is shown
 #contentLayer {
     display: none;
     height: 100%;
+    min-height: 1062px;
     overflow-x: hidden;
     overflow-y: auto;
     position: absolute;
@@ -163,19 +164,17 @@ so that the content is unclickable while menu is shown
     top: 0;
     width: 60%;
     z-index: 5;
-    min-height: 1062px;
 }
 
 h1 {
     color: #eee;
-    font-size: 28px;
-    font-weight: normal;
-    margin: 0;
-    line-height: 32px;
     font-family: 'Great Vibes', cursive;
-    text-align: left;
-    padding-left: 66px;
+    font-size: 34px;
+    font-weight: normal;
     line-height: 1.3;
+    line-height: 32px;
+    margin: 0;
+    text-align: center;
 }
 
 
@@ -192,48 +191,41 @@ ul {
     list-style: none;
 }
 
-ul {
-    list-style: none;
-}
-
-
-
-
 .maps {
-    width: 100%;
-    position:absolute;
-    top:40px;
     bottom:50px;
     left:0;
+    position:absolute;
     right:0;
+    top:40px;
+    width: 100%;
 }
 
 .map-canvas {
-	width: 100%;
-	height: 600px;
-	border: 1px solid #aaa;
-    z-index: 1;
+    border: 1px solid #aaa;
+    height: 600px;
+    width: 100%;
     position: relative;
+    z-index: 1;
 }
 
 ul.ui-tabs-nav {
-	list-style: none;
-	padding: 0;
+    list-style: none;
+    padding: 0;
     margin-bottom: 0;
 }
 
 ul.ui-tabs-nav li {
-	width: 50%;
-	display: block;
+    display: block;
+    outline: 1px solid #aaa;
+    width: 50%;
     float: left;
-	outline: 1px solid #aaa;
 }
 
 ul.ui-tabs-nav li a {
-	text-decoration: none;
-	padding: 10px 20px;
-	display: block;
-	text-align: center;
+    display: block;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
 }
 
 ul.ui-tabs-nav li.ui-tabs-active{
@@ -252,9 +244,9 @@ ul.ui-tabs-nav li.ui-tabs-active a {
 }
 
 .feed ul{
+    list-style: none;
     margin: 0;
     padding: 0;
-    list-style: none;
 }
 
 .feed li {
@@ -266,22 +258,22 @@ ul.ui-tabs-nav li.ui-tabs-active a {
 }
 
 .feed ul .instagram-pic {
-    width: 100%;
     max-width:600px;
+    width: 100%;
 }
 
 .feed ul .profile-pic {
-    width:30px;
-    height:30px;
     float:left;
+    height:30px;
+    width:30px;
 }
 
 .feed .notification {
-    border:1px solid #999;
+    background-color:#DFF2BF;
     border-radius:5px;
+    border:1px solid #999;
     color:#4F8A10;
     padding:6px;
-    background-color:#DFF2BF;
     text-align:center;
 }
 
@@ -289,5 +281,24 @@ ul.ui-tabs-nav li.ui-tabs-active a {
     font-size:18px;
 }
 
+.schedule {
+  width: 80%;
+  margin: 20px auto 0;
+}
 
+.schedule td {
+  padding: 4px 0;
+}
+
+.schedule td.time{
+  text-align: right;
+}
+
+.schedule .field {
+  background: #fff
+}
+
+.schedule .dots {
+  background: url('/images/dot.png') repeat-x bottom;
+}
 
