--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -114,6 +114,10 @@ nav li a {
     display: block;
     padding: 15px;
     text-decoration: none;
+    font-family: Georgia;
+    font-style: italic;
+    font-size: 16px;
+    font-weight: normal;
 }
 
 nav li a.active{
@@ -162,7 +166,7 @@ so that the content is unclickable while menu is shown
     position: absolute;
     right: 0;
     top: 0;
-    width: 60%;
+    width: 40%;
     z-index: 5;
 }
 
@@ -283,11 +287,15 @@ ul.ui-tabs-nav li.ui-tabs-active a {
 
 .schedule {
   width: 80%;
-  margin: 20px auto 0;
+  margin: 30px auto 0;
 }
 
 .schedule td {
   padding: 4px 0;
+  font-family: Georgia;
+  font-style: italic;
+  font-size: 16px;
+  font-weight: normal;
 }
 
 .schedule td.time{
@@ -297,8 +305,3 @@ ul.ui-tabs-nav li.ui-tabs-active a {
 .schedule .field {
   background: #fff
 }
-
-.schedule .dots {
-  background: url('/images/dot.png') repeat-x bottom;
-}
-
