--- a/views/schedule.jade
+++ b/views/schedule.jade
@@ -3,12 +3,15 @@ extends layout
 block content
   #content
     table.schedule
+      - pubNum=0
       - for (neighbourhood in pubs)
         - for (var i = 0; i < pubs[neighbourhood].length; i++)
+          - pubNum++
           tr
             td.venue
               .dots
                 .field
+                  = pubNum + ": "
                   a(href="http://maps.google.com/?q=" + pubs[neighbourhood][i].address)
                     = pubs[neighbourhood][i].name
             td.time
