--- a/views/layout.jade
+++ b/views/layout.jade
@@ -18,7 +18,7 @@ html
         ul
 
           li
-            a(href='/') (Ho Ho) Home!!
+            a(href='/') (Ho, Ho) Home!!
           li
             if slug == 'feed'
               a(href='/feed', class="active") Feed
@@ -41,7 +41,7 @@ html
           h3
             | About
           p.hide
-            | Hastily handmade in Brooklyn in December, 2013 by <a href="https://twitter.com/lukasmairl">@lukasmairl</a>,<a href="https://twitter.com/juannerito">@juannerito</a> and <a href="http://instagram.com/martinolson">@martinolson</a> using <a href="http://nodejs.org/">node.js</a> and <a href="https://www.heroku.com/">heroku.</a> Badly.
+            | Hastily handmade in Brooklyn in December, 2013 by <a href="https://twitter.com/lukasmairl">@lukasmairl</a>, <a href="https://twitter.com/juannerito">@juannerito</a> and <a href="http://instagram.com/martinolson">@martinolson</a> using <a href="http://nodejs.org/">node.js</a> and <a href="https://www.heroku.com/">heroku.</a> Badly.
 
 
       #contentLayer
