Added the home intro area (still need to cookie the hiding!) and tweaked the schedule.

--- a/views/index.jade
+++ b/views/index.jade
@@ -3,3 +3,6 @@ extends layout
 block content
   #content
     p Welcome to #{title}
+    #welcome
+        .help-hide OK, got it.
+        p This is where we explain the 12 pubs of xmas. It's a complicated concept.
