--- a/views/schedule.jade
+++ b/views/schedule.jade
@@ -11,7 +11,7 @@ block content
             td.venue
               .dots
                 .field
-                  = pubNum + ": "
+                  = pubNum + ". "
                   a(href="http://maps.google.com/?q=" + pubs[neighbourhood][i].address)
                     = pubs[neighbourhood][i].name
             td.time
