--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,7 @@ html
     title= title
     meta(content="initial-scale=1, maximum-scale=1, user-scalable=no", name="viewport")
     link(href='http://fonts.googleapis.com/css?family=Great+Vibes', rel='stylesheet', type='text/css')
+    link(rel='stylesheet', href='/stylesheets/hook.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(href='/images/beer.png', rel='shortcut icon')
   body
@@ -54,6 +55,8 @@ html
     script(src="https://maps.googleapis.com/maps/api/js?key=#{gmaps}&v=3.exp&sensor=false")
     script(src="./javascripts/libs/jquery-1.10.2.min.js")
     script(src="./javascripts/libs/jquery-ui-1.10.3.custom.min.js")
+    script(src="./javascripts/libs/mousewheel.js")
+    script(src="./javascripts/libs/hook.min.js")
     script(src="./javascripts/index.js")
     script(src="./javascripts/maps.js")
     script(src="//platform.twitter.com/widgets.js")
