--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -204,7 +204,7 @@ so that the content is unclickable while menu is shown
 h1 {
     color: #eee;
     font-family: 'Great Vibes', cursive;
-    font-size: 34px;
+    font-size: 24px;
     font-weight: normal;
     line-height: 1.3;
     line-height: 32px;
@@ -274,8 +274,19 @@ ul.ui-tabs-nav li.ui-tabs-active a {
     width:200px;
 }
 
+#content.feed {
+    padding-left:0;
+    padding-right:0;
+}
+
 .feed {
-    margin-top:10px;
+    padding-top:40px;
+}
+
+.feed .feed-header {
+    text-align:center;
+    font-size:12px;
+    line-height:1.6em;
 }
 
 .feed ul{
@@ -304,17 +315,32 @@ ul.ui-tabs-nav li.ui-tabs-active a {
 }
 
 .feed .notification {
-    background-color:#DFF2BF;
+    
     border-radius:5px;
     border:1px solid #999;
     color:#4F8A10;
     padding:6px;
     text-align:center;
+
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    margin: 10px 0px;
+    border-color: rgb(238, 238, 238) rgb(221, 221, 221) rgb(187, 187, 187);
+    border-width: 1px;
+    border-style: solid;
+    box-shadow: rgba(0, 0, 0, 0.14902) 0px 1px 3px;
+    position: static;
+    visibility: visible;
+
 }
 
 .feed .notification strong {
     font-size:18px;
 }
+
+
 
 .schedule {
   width: 80%;
@@ -335,4 +361,12 @@ ul.ui-tabs-nav li.ui-tabs-active a {
 
 .schedule .field {
   background: #fff
+}
+
+
+@media (min-width:960px) { 
+    .feed {
+        width:502px;
+        margin:0 auto;
+    }
 }
