--- a/views/feed.jade
+++ b/views/feed.jade
@@ -21,7 +21,7 @@ block content
               |<p style="text-align:center">Now at</p>
               div.notification
                 p
-                  <img src="/images/beer.png"/>
+                  <img src="/images/xmasbeer.png"/>
                 p
                   |<strong><span class="pub">#{item.pub}</span></strong><br/>##{item.hashtag} #12PubsHuge
                 p
